--- a/3. software packages and algorithms employed.md
+++ b/3. software packages and algorithms employed.md
@@ -7,12 +7,12 @@
 > * **pro-tip**: When preparing your spreadsheets for analysis in UCiNet, but also simply in order to get a better grasp of your data, it is handy to keep in mind a few simple calculations matrix calculations. Imagine, for instance, that one has followed the rules for calculating the flow-of-funds between two branches `X` and `Y`, according to the rules [outlined earlier](https://github.com/michaelschiltz/even-keel/blob/master/1.%20database%20architecture.md#a-flow-of-funds-analysis).
 > * Having done this, we still have no number expressing the 'net' transfer between branches. Instead, we have 2 numbers, i.e. one expressing the flow `X->Y` and `Y->X`. See below, and note amounts `a` and `b`:
 
-|   | X   | Y   |
+> * |   | X   | Y   |
 |---|-----|-----|
 | **X** | -   | `a` |
 | **Y** | `b` | -   |
 
-> * The net number can be obtained as follows. First, use the `TRANSPOSE` function in your spreadsheet program (we have used google sheets, as it is both free but also [less error prone than Microsoft Excel](http://blogs.lse.ac.uk/impactofsocialsciences/2017/02/22/excel-is-threatening-the-quality-of-research-data-data-packages-are-here-to-help/); and compare this [github page of crazy excel stories](https://github.com/jennybc/scary-excel-stories)).
+> * The net number can be obtained as follows. First, [use the `TRANSPOSE` function in your spreadsheet program](https://gsuitetips.com/tips/sheets/how-to-transpose-data-in-a-google-spreadsheet/) (we have used google sheets, as it is both free but also [less error prone than Microsoft Excel](http://blogs.lse.ac.uk/impactofsocialsciences/2017/02/22/excel-is-threatening-the-quality-of-research-data-data-packages-are-here-to-help/); and compare this [github page of crazy excel stories](https://github.com/jennybc/scary-excel-stories)).
 > * Then, subtract the transposed matrix from the original one. The result is one matrix, with mirroring results of transfers in the parts above and under the diagonal (i.e. the diagonal of `-`-values that is the result of forbidding the possibility of loops, i.e. branches sending amounts to themselves (as would the case in, for instance, an amount sent from `X` to `X`)).
 > * Last, clean the resulting matrix by eliminating all negative amounts. This could be done manually, but this is obviously prone to mistakes, hence it is better to use `logical expressions`, i.e. the [`IF`-function in google sheets](https://support.google.com/docs/answer/3093364?hl=en). In this case, data are formatted according to the following syntax: `IF(logical_expression, value_if_true, value_if_false)`. Concretely, we have used `=if(value<0,0,value)`, whereby value is the number of the spreadsheet cell to which the logical expression applies.
 
