--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -9,7 +9,7 @@ Table 1.
 
 | bill type    | specifics             | amounts | calculations                                                    |
 |--------------|-----------------------|---------|-----------------------------------------------------------------|
-| bills sold   | bills of exchange     |       `a` | `$(c + d) - (a + b)$`                                               |
+| bills sold   | bills of exchange     |       `a` | $(c + d) - (a + b)$                                               |
 |              | telegraphic transfers |       `b` | amount of interest bills `(d)`                                    |
 | bills bought | bills of exchange     |       `c` | `((c + d) - (a + b)) + d`                                         |
 |              | telegraphic transfers |       `d` | conversions of `(((c + d) - (a + b)) + d)` into Japanese yen (JPY)|
