--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -49,6 +49,7 @@ Table 2.
 
 > * for obvious reasons, branches cannot send amounts to themselves (so-called 'self-loops'). Therefore, these cells have been filled with `-`.
 > * as in the above table, amounts sent are expressed by means of generic letters, `a`, `b`, `c`, `d`, `a'`, `b'` etc.
+> * `BS` and `BB` stand for respectively 'bills sold' and 'bills bought'. Bills sold represent the remittances (in the form of a bill (`b/e`) )or a telegraphic transfer (`TT`) that importers use for paying their exporting counterpart abroad. Bills bought are bills bought from exporters.
 > * The direction is important: it must be remembered that in network analysis, by convention, the direction goes from from the rows to the columns. Hence, the flow from X to Y, which we generically defined as `a` in table 1 can now be found as `a` in the second row, third column, under Y; vice versa, the flows from Y to X, 3 can be found as `a''`, `b''`, etc. on row 6, column 4, under X.
 
 
