Update 1. database architecture.md

--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -117,7 +117,7 @@ A particular point of attention must be reserved for the so-called `interest bil
 
 >>“The interest on interest bills to East-Asia is normally 6%, but last year, due to problems in Russo-Japanese relations, the rate was increased to 7%”. 
 
->In other words, even when estimating the yearly cost of London acceptance credit to be around 5% in the 1900s, arbitraging must have been a lucrative affair. And indeed, the share of interest bills in the total ‘bills sent’ portfolio of YSB London is very high (consistently more than 60% after 1898). 石川由郎. 1907. 『英国為替銀行ニ関スル復命書』. 三井銀行. P. 67; p. 76.
+>In other words, even when estimating the yearly cost of London acceptance credit to be around 5% in the 1900s, arbitraging must have been a lucrative affair. And indeed, the share of interest bills in the total ‘bills sent’ portfolio of YSB London is very high (consistently more than 60% after 1898). 石川由郎. 1907. 『[英国為替銀行ニ関スル復命書](https://doi.org/10.6084/m9.figshare.3799386.v1)』. 三井銀行. P. 67; p. 76.
 
 >> Sources:
 >> * Ishii Kanji 石井寛治. 1999. *Kindai nihon kin’yū-shi josetsu* 『近代日本金融史序説』. 東京大学出版会. P. 250-251; 
