--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -106,7 +106,7 @@ Source: [own data and analysis](https://plot.ly/~michaelschiltz/13/ysb-branches-
 
 A particular point of attention must be reserved for the so-called `interest bills`, or *ritsuki tegata* 利付手形. For a host of reasons, they pose some serious interpretative hurdles for the financial historian. Concretely, these bills were, at least for the period 1898-1908, not included in the Midterm Reports’ flow data, but treated as a particular category under `statement of loans and bills discounted` (*kashikin oyobi tegata waribiki no koto* 貸金及ビ手形割引ノ事). This exclusion from the `statement of the amount of bills sent and received` has caused considerable misunderstandings among students of Yokohama Specie Bank foreign exchange operations. 
 
-> * Notably Taira, who pioneered the network approach to YSB flow-of-funds, surmised that interest bills were listed in both ‘statement of loans and bills discounted’ and the ‘statement on foreign exchange holdings and movements’. Hence, he omitted them from his analysis as it would otherwise amount to double-counting the data. Ishii, on the other hand, has convincingly argued that the interest bill data cannot have been included in the statement on foreign exchange holdings and movements, as Japan’s trade deficit with Great-Britain in this period should in any case have resulted in very large transfers of funds from Great-Britain to Japan (as exports from Great-Britain to Japan would have been financed by bills bought in London and sent to Yokohama and Kobe for collection). Consequently, Taira’s analysis, which seems to show a reverse flow of funds from Japan to Great-Britain, must be mistaken. 
+> * Notably Taira, who pioneered the network approach to YSB flow-of-funds, surmised that interest bills were listed in both ‘statement of loans and bills discounted’ and the ‘statement on foreign exchange holdings and movements’. Hence, he omitted them from his analysis as it would otherwise amount to double-counting the data. Ishii, on the other hand, has convincingly argued that the interest bill data *cannot* have been included in the statement on foreign exchange holdings and movements, as Japan’s trade deficit with Great-Britain in this period should in any case have resulted in very large transfers of funds from Great-Britain to Japan (as exports from Great-Britain to Japan would have been financed by bills bought in London and sent to Yokohama and Kobe for collection). Consequently, Taira’s analysis, which seems to show a reverse flow of funds from Japan to Great-Britain, must be mistaken. 
 > * Yet another interpretation can be found in Bak (Park). In his view, interest bills functioned as remittances (*sōkin* 送金) of foreign exchange which were sent  by the branch/office in charge of collection (*toritate-ten* 取立店) to the branch/office that had purchased the bill (*kaitori-ten* 買取店). In other words, Bak believes that interest bills were a means of settling (squaring) accounts between branches (in Japanese referred to as remitting (*kaikin* 回金) (as opposed to reimbursing)). In this view, including the interest bills in the flow of funds also amounts to double-counting, yet in a way different from Taira’s interpretation. However, as is clear from e.g. interest bills handled by the New York office, *interest bills were also used for trade transactions*.
 > * Based on Nishimura's early discussion (see the description in the book), we suspect that their classification under `statement of loans and bills discounted` hints to their nature as finance bills rather than bills designating an underlying trade transaction (the latter being called 'real bills' at the time).
 > * The consequences of such conjecture may be profound. As we point out in the book, it hints to the existence of a late nineteenth century **carry trade**. We possess at least descriptive evidence of the latter:
