Update 3. software packages and algorithms employed.md

--- a/3. software packages and algorithms employed.md
+++ b/3. software packages and algorithms employed.md
@@ -17,7 +17,7 @@
 > * Last, clean the resulting matrix by eliminating all negative amounts. This can be done manually, but this is obviously prone to mistakes, hence it is better to use `logical expressions`, i.e. the [`IF`-function in google sheets](https://support.google.com/docs/answer/3093364?hl=en). In this case, data are formatted according to the following syntax: `IF(logical_expression, value_if_true, value_if_false)`. Concretely, we have used `=if(value<0,0,value)`, whereby `value` is the amount in the spreadsheet cell to which the logical expression applies.
 > * This technique is especially helpful because of a caveat in contemporary Social Network Analysis, i.e. the difficulty to conceive of *negative flows*. Admittedly, there seems to have been [some improvement in this respect](https://doi.org/10.1016/j.socnet.2014.03.005), but this is still a far cry from applications in, for instance, finance, where negative flows (for example: somebody initiating a negative flow by overdrawing his/her account) are very common.
 
-Readers interested in the process of 'cleaning' the matrices for the book project may want to refer to [here](https://doi.org/10.6084/m9.figshare.7038710.v2). 
+Readers interested in the process of 'cleaning' the matrices for the book project may want to refer to [here](https://doi.org/10.6084/m9.figshare.7038710.v2). The 'cleaned data' fed into the software are [here](https://doi.org/10.6084/m9.figshare.4645420.v1).
 
 
 ### R-project & Python
