Update 1. database architecture.md

--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -28,7 +28,7 @@ In the case of `bills sold`, however, the direction of the transfer is reversed.
 >> * Bloomfield, Arthur I. 1963. *Short-Term Capital Movements under the Pre-1914 Gold Standard*. Princeton Studies in International Finance, no. 11. Princeton, N.J: International Finance Section, Dept. of Economics, Princeton University.
 
 
-2. Consequently, an adjacency matrix for a a generic branch network with branches X,Y,Z at a point in time `t1` looks as follows:
+2. Consequently, an adjacency matrix for a generic branch network with branches X,Y,Z at a point in time `t1` looks as follows:
 
 Table 2.
 
@@ -80,7 +80,7 @@ This can be done for all points in time `t1`, `t2`, `t3`, etc. Calculating the `
 
 The latter's visualization is graph 1 (below)
 
-### Ethnographic relevance
+### Ethnographic or 'archeological' relevance
 
 > * when plotting, in a time series, the differential between a) funds sent from X to Y and b) funds sent from Y to X, we inadvertently *yet consciously* point out the *necessary* existence of a 'negative' `FoF-index` of certain branches versus others (either X or Y) and, by extension, the possibility of a negative `FoF-index` of a certain branch *vis-a-vis* the aggregated branch network. This may seem obvious and, indeed, *it is*: bankers at the time complained relentlessly about certain branches that they considered to be chronic 'withdrawers' of funds. In the vocabulary and thinking of social network analysis (SNA), however, it is not that simple. As the theory stands now, SNA does not easily accept the possibility of 'negative flows' (as, for instance, in the case of a banking customer using an overdraft facility with his local bank). In the book manuscript, I thought it to be important to be true to the contemporary problem awareness, and have attempted to allow the possibility of negative flows in the analysis and visualizations. See graph 1 below.
 
