Update 1. database architecture.md

--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -10,9 +10,9 @@ Table 1.
 | bill type    | specifics             | amounts | calculations                                                    |
 |--------------|-----------------------|---------|-----------------------------------------------------------------|
 | bills sold   | bills of exchange     |       $a$ | $(c + d) - (a + b)$                                               |
-|              | telegraphic transfers |       $b$ | amount of interest bills $(d)$                                    |
-| bills bought | bills of exchange     |       $c$ | $((c + d) - (a + b)) + d$                                         |
-|              | telegraphic transfers |       $d$ | conversions of $(((c + d) - (a + b)) + d)$ into Japanese yen (JPY)|
+|              | telegraphic transfers |       $b$ | amount of interest bills $(e)$                                    |
+| bills bought | bills of exchange     |       $c$ | $((c + d) - (a + b)) + e$                                         |
+|              | telegraphic transfers |       $d$ | conversions of $(((c + d) - (a + b)) + e)$ into Japanese yen (JPY)|
 
 Matrices prepared for the book project all follow this principle of organization. See a) [originals](https://doi.org/10.6084/m9.figshare.4059786.v4) (i.e. without amounts of interest bills and in the original currencies), b) [matrices *with* amounts of interest bills included](https://doi.org/10.6084/m9.figshare.4059807.v4), and 3) [(b) together with the amounts converted into Japanese yen](https://doi.org/10.6084/m9.figshare.4059843.v4).
 
