Update 1. database architecture.md

--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -3,11 +3,11 @@
 
 ### Data structure
 
-1. how to calculate the flow of funds amount from (generic) branch X to (generic) branch Y:
+1. how to calculate the flow of funds amount from (generic) branch X to (generic) branch Y, on the basis of the organization of matrices in the original Midterm reports:
 
 Table 1.
 
-| bill type    | specifics             | amounts | calculations                                                    |
+| bill type    | specifics             | amounts | calculations (including addition of 'interest bills'                                                   |
 |--------------|-----------------------|---------|-----------------------------------------------------------------|
 | bills sold   | bills of exchange     |       $a$ | $(c + d) - (a + b)$                                               |
 |              | telegraphic transfers |       $b$ | amount of interest bills $(e)$                                    |
