Update 1. database architecture.md

--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -7,7 +7,7 @@
 
 Table 1.
 
-| bill type    | specifics             | amounts | calculations (including addition of 'interest bills'                                                   |
+| bill type    | specifics             | amounts | calculations (including addition of 'interest bills' data)                                                   |
 |--------------|-----------------------|---------|-----------------------------------------------------------------|
 | bills sold   | bills of exchange     |       $a$ | $(c + d) - (a + b)$                                               |
 |              | telegraphic transfers |       $b$ | amount of interest bills $(e)$                                    |
