Update 1. database architecture.md

--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -4,7 +4,7 @@
 ### Data structure
 
 1. how to calculate the flow of funds amount from (generic) branch X to (generic) branch Y, on the basis of the organization of matrices in the original Midterm reports:
-*note that the `amount of interest bills $(e)$` were categorized differently, for reasons explained below.*
+*note that the `amount of interest bills (e)` were categorized differently, for reasons explained below.*
 
 Table 1.
 
