--- a/6. other.md
+++ b/6. other.md
@@ -1,1 +1,34 @@
+One of the aspects of exchange banking that has long eluded myself and other researchers, is the notion of profitability of the bill business. Fortunately, this has
+been cleared up by Suzuki Toshio in a recent paper. He quotes a letter, dated January 14 1885, in the David McLean archives at SOAS, in which McLean explains how exchange bankers arrived at an exchange rate and how they calculated/estimated the profits they were going to reap. I quote the letter first (it can be found in a chapter by Manhan Siu (see below)):
 
+> " As a rule, we buy 60d/st at 2d. under your rate for 4 months private.
+£100@3s.6d. = $571.43 @ 3s.8d. 4m/st £104 15s. 3d.
+Allow
+37 days out [delivery time for sending bills from London to Hong Kong]
+37 days home [delivery time for sending bills from Hong Kong to London]
+63 days for 60 days’ bills to mature
+123 days for 4 months’ sight bills to mature
+7 days extra
+Altogether 267 days @ 3 1/2% (rate for overdrafts last 6 months) = £ 2 11s. 3d.
+Stamp 1s.
+Profit £ 2 3s.
+
+> 2.3 per cent net profit on the transaction.
+This estimate also applies to Singapore and Yokohama."
+
+
+According to Suzuki, this should be interpreted as follows:
+
+> "On the condition that the HSBC’s London office would borrow money for £100 from a financial institution in London, the HSBC’s head office in Hong Kong would sell telegraphic transfer paying in London on the basis of the borrowed money. If the telegraphic transfer rate for one Hong Kong Dollar [hereafter H.K.$] was 3s. 6 3/4d. (£1 = H.K.$5.6140), the HSBC head office would receive H.K.$561.40 for £100 telegraphic transfer paying in London, which the HSBC head office would then sell to customers. In order to cover the sale of the telegraphic transfer, the HSBC head office would purchase export documentary bills on London payable four months later after sight in Hong Kong using these proceeds (H.K.$561.40). If the rate of documentary bills payable four month later after purchase was higher than the telegraphic transfer rate by one penny (one H.K.$ = 3s. 7 3/4d.; £1 = H.K.$5.4857), the head office would purchase a bill for £102 6s. 9d. (£102.3382) using the aforementioned H.D.$561.40. After four months, when the bills were sent to London and collected, the HSBC London office would receive £102 6s. 9d. (£102.3382) as proceeds".
+
+Obviously, the bank had to bear a cost for having borrowed the money. This would affect profitability as follows:
+
+> "as the HSBC had initially borrowed the money for the £100, it needed to pay interest until the documentary bill was collected and to pay off the principal
+(£100). The timing for the bill sent from Hong Kong and arriving in London for collection was as follows: posting 37 days, then four months after sight (123 days),
+with a grace period of three days, totaling 163 days. If the annual interest rate in London was fixed at 3 1/3%, the interest on £100 for 163 days would be £1 11s.
+3d. (£1.5625). There was also a stamp duty of 1s. In addition, commissions charged for drawing the bill and the charge for the telegraphic transfer should be taken into consideration, but McLean’s letter did not include them in this transaction. In the end, if the principal (£100) and charges including the interest (£1.5625) and a stamp duty (£0.05) were deducted from the proceeds of the bill on London payable four months later after sight (£102.3382), the HSBC’s profit would be £0.725 (1.623% per annum)."
+
+
+Sources: 
+* Siu, Manhan. 2020. “A Case Study on British International Banks: The London Office of the Hongkong and Shanghai Banking Corporation, 1875–1889.” In *The Development of International Banking in Asia*, edited by Takeshi Nishimura and Ayumu Sugawara, 157–76. Studies in Economic History. Tokyo: Springer Japan. https://doi.org/10.1007/978-4-431-55615-2_6. P. 162.
+* Suzuki, Toshio. 2020. “British Overseas Banks’ Activities in the London Financial Market Before the First World War from a View Point of Bill Transactions.” In *The Development of International Banking in Asia*, edited by Takeshi Nishimura and Ayumu Sugawara, 115–55. Studies in Economic History. Tokyo: Springer Japan. https://doi.org/10.1007/978-4-431-55615-2_5. Pp. 145-146.
