--- a/6. other.md
+++ b/6. other.md
@@ -2,7 +2,7 @@ One of the aspects of exchange banking that has long eluded myself and other res
 been cleared up by Suzuki Toshio in a recent paper. He quotes a letter, dated January 14 1885, in the David McLean archives at SOAS, in which McLean explains how exchange bankers arrived at an exchange rate and how they calculated/estimated the profits they were going to reap. I quote the letter first (it can be found in a chapter by Manhan Siu (see below)):
 
 > " As a rule, we buy 60d/st at 2d. under your rate for 4 months private.
-£100@3s.6d. = $571.43 @ 3s.8d. 4m/st £104 15s. 3d.
+£100 @ 3s.6d. = $571.43 @ 3s.8d. 4m/st £104 15s. 3d.
 Allow
 37 days out [delivery time for sending bills from London to Hong Kong]
 37 days home [delivery time for sending bills from Hong Kong to London]
@@ -19,7 +19,7 @@ This estimate also applies to Singapore and Yokohama."
 
 According to Suzuki, this should be interpreted as follows:
 
-> "On the condition that the HSBC’s London office would borrow money for £100 from a financial institution in London, the HSBC’s head office in Hong Kong would sell telegraphic transfer paying in London on the basis of the borrowed money. If the telegraphic transfer rate for one Hong Kong Dollar (hereafter H.K.  $) was 3s. 6 3/4d. (£ 1 = H.K. $ 5.6140), the HSBC head office would receive H.K. $ 561.40 for £100 telegraphic transfer paying in London, which the HSBC head office would then sell to customers. In order to cover the sale of the telegraphic transfer, the HSBC head office would purchase export documentary bills on London payable four months later after sight in Hong Kong using these proceeds (H.K. $ 561.40). If the rate of documentary bills payable four month later after purchase was higher than the telegraphic transfer rate by one penny (one H.K. $ = 3s. 7 3/4d.; £ 1 = H.K. $ 5.4857), the head office would purchase a bill for £ 102 6s. 9d. (£ 102.3382) using the aforementioned H.D. $ 561.40. After four months, when the bills were sent to London and collected, the HSBC London office would receive £ 102 6s. 9d. (£ 102.3382) as proceeds".
+> "On the condition that the HSBC’s London office would borrow money for £100 from a financial institution in London, the HSBC’s head office in Hong Kong would sell telegraphic transfer paying in London on the basis of the borrowed money. If the telegraphic transfer rate for one Hong Kong Dollar (hereafter H.K. \$) was 3s. 6 3/4d. (£ 1 = H.K. $ 5.6140), the HSBC head office would receive H.K. $ 561.40 for £100 telegraphic transfer paying in London, which the HSBC head office would then sell to customers. In order to cover the sale of the telegraphic transfer, the HSBC head office would purchase export documentary bills on London payable four months later after sight in Hong Kong using these proceeds (H.K. $ 561.40). If the rate of documentary bills payable four month later after purchase was higher than the telegraphic transfer rate by one penny (one H.K. $ = 3s. 7 3/4d.; £ 1 = H.K. $ 5.4857), the head office would purchase a bill for £ 102 6s. 9d. (£ 102.3382) using the aforementioned H.D. $ 561.40. After four months, when the bills were sent to London and collected, the HSBC London office would receive £ 102 6s. 9d. (£ 102.3382) as proceeds".
 
 Obviously, the bank had to bear a cost for having borrowed the money. This would affect profitability as follows:
 
