--- a/6. other.md
+++ b/6. other.md
@@ -3,13 +3,15 @@ been cleared up by Suzuki Toshio in a recent paper. He quotes a letter, dated Ja
 
 > " As a rule, we buy 60d/st at 2d. under your rate for 4 months private.
 `£`100 @ 3s.6d. = `$`571.43 @ 3s.8d. 4m/st `£`104 15s. 3d.
-Allow
-37 days out [delivery time for sending bills from London to Hong Kong]
-37 days home [delivery time for sending bills from Hong Kong to London]
-63 days for 60 days’ bills to mature
-123 days for 4 months’ sight bills to mature
-7 days extra
-Altogether 267 days @ 3 1/2% (rate for overdrafts last 6 months) = `£` 2 11s. 3d.
+
+> Allow
+* 37 days out [delivery time for sending bills from London to Hong Kong]
+* 37 days home [delivery time for sending bills from Hong Kong to London]
+* 63 days for 60 days’ bills to mature
+* 123 days for 4 months’ sight bills to mature
+* 7 days extra
+
+> Altogether 267 days @ 3 1/2% (rate for overdrafts last 6 months) = `£` 2 11s. 3d.
 Stamp 1s.
 Profit `£` 2 3s.
 
