--- a/6. other.md
+++ b/6. other.md
@@ -23,7 +23,7 @@ According to Suzuki, this should be interpreted as follows:
 
 > "On the condition that the HSBC’s London office would borrow money for £100 from a financial institution in London, the HSBC’s head office in Hong Kong would sell telegraphic transfer paying in London on the basis of the borrowed money. If the telegraphic transfer rate for one Hong Kong Dollar (hereafter H.K.`$`) was 3s. 6 3/4d. (`£` 1 = H.K. `$`5.6140), the HSBC head office would receive H.K. `$`561.40 for £100 telegraphic transfer paying in London, which the HSBC head office would then sell to customers. In order to cover the sale of the telegraphic transfer, the HSBC head office would purchase export documentary bills on London payable four months later after sight in Hong Kong using these proceeds (H.K.`$` 561.40). If the rate of documentary bills payable four month later after purchase was higher than the telegraphic transfer rate by one penny (one H.K.`$` = 3s. 7 3/4d.; `£` 1 = H.K.`$` 5.4857), the head office would purchase a bill for `£` 102 6s. 9d. (`£` 102.3382) using the aforementioned H.D. `$`561.40. After four months, when the bills were sent to London and collected, the HSBC London office would receive `£` 102 6s. 9d. (`£` 102.3382) as proceeds".
 
-Obviously, the bank had to bear a cost for having borrowed the money. This would affect profitability as follows:
+Obviously, the bank had to bear a cost for having borrowed the money in the first place. This would affect profitability as follows:
 
 > "as the HSBC had initially borrowed the money for the £100, it needed to pay interest until the documentary bill was collected and to pay off the principal
 (£100). The timing for the bill sent from Hong Kong and arriving in London for collection was as follows: posting 37 days, then four months after sight (123 days),
