--- a/3. software packages and algorithms employed.md
+++ b/3. software packages and algorithms employed.md
@@ -1,7 +1,6 @@
 ### UCiNet
 
-
-> * source: Borgatti, S.P., Everett, M.G. and Freeman, L.C. 2002. Ucinet for Windows: Software for Social Network Analysis. Harvard, MA: Analytic Technologies. https://sites.google.com/site/ucinetsoftware/home
+> * source: Borgatti, S.P., Everett, M.G. and Freeman, L.C. 2002. Ucinet for Windows: Software for Social Network Analysis. Harvard, MA: Analytic Technologies. <https://sites.google.com/site/ucinetsoftware/home>
 > * our discussion relies on **force-directed drawing (FDD) algorithms**, concretely the graph layout algorithms (GLA) that are built into the UCINET software package. FDD algorithms proceed in a way that is rather different from MDS (multi-dimensional scaling). They do not attempt to map a network’s structure (i.e. its relations of similarities respectively dissimilarities) in terms of the raw distances of the proximity matrix, yet *conceive of it in terms of energy*. Core to minimizing energy is strain. Typically, FDD algorithms are therefore referred to as ‘spring embedders’. As the name suggests, they act as a system of springs, stretched between posts in a force field. If two posts with a spring between them are placed too close to each other, the spring is compressed and tries to push the posts apart (a property we also refer to as ‘node repulsion’). If, on the other hand, the posts are too far apart, the spring is stretched and tries to pull the posts together (a property called ‘node attraction’). In essence, the algorithms are methods of locating the posts in such a way as to bring the repulsive and attractive forces throughout the entire field in a stable, balanced state.
 
 > * **PRO-TIP**: When preparing your spreadsheets for analysis in UCiNet, but also simply in order to get a better grasp of your data, it is handy to keep in mind a few simple calculations matrix calculations. Imagine, for instance, that one has followed the rules for calculating the flow-of-funds between two branches `X` and `Y`, according to the rules [outlined earlier](https://github.com/michaelschiltz/even-keel/blob/master/1.%20database%20architecture.md#a-flow-of-funds-analysis).
@@ -18,7 +17,6 @@
 > * This technique is especially helpful because of a caveat in contemporary Social Network Analysis, i.e. the difficulty to conceive of *negative flows*. Admittedly, there seems to have been [some improvement in this respect](https://doi.org/10.1016/j.socnet.2014.03.005), but this is still a far cry from applications in, for instance, finance, where negative flows (for example: somebody initiating a negative flow by overdrawing his/her account) are very common.
 
 Readers interested in the process of 'cleaning' the matrices for the book project may want to refer to [here](https://doi.org/10.6084/m9.figshare.7038710.v2). The 'cleaned data' fed into the software are [here](https://doi.org/10.6084/m9.figshare.4645420.v1).
-
 
 ### R-project & Python
 
