markdown issues corrected

--- a/2. data inclusion and exclusion.md
+++ b/2. data inclusion and exclusion.md
@@ -1,5 +1,5 @@
 
-### Flow data: Flow-of-fund (資金循環) analysis of an exchange bank branch network
+# Flow data: Flow-of-fund (資金循環) analysis of an exchange bank branch network
 
 > * A reconstruction of YSB’s flow-of-funds has been attempted by many others, with varying degrees of success. As indicated in the chapter "Making of the Database", Taira’s groundbreaking study is the first to bring a network theoretical understanding to YSB, but it unfortunately eliminated the data related to the interest bills (not included in the flow data for accounting reasons). As a matter of fact, he surmised that interest bills were listed in both `statement of loans and bills discounted` and the `statement on foreign exchange holdings and movements`. Hence, he omitted them from his analysis as it would otherwise amount to double-counting the data. 
 >> *Sources*: 
@@ -19,7 +19,7 @@
 
 Source: own dataset and visualization; see: my [plotly-pages](https://plot.ly/~michaelschiltz/50/ysb-on-an-even-keel-1893-1908/)
 
-### Balance sheet data: stock data
+# Balance sheet data: stock data
 
 > * in the Midterm reports of the Yokohama Specie Bank, stock data are generally included as follows:
 
