--- a/5. quality and nature of sources for construction of the dataset.md
+++ b/5. quality and nature of sources for construction of the dataset.md
@@ -1,6 +1,6 @@
-## The Accounts: Problems of Analysis
+# The Accounts: Problems of Analysis
 
-### Sources:
+## Sources:
 > As noted in Frank King's *The History of the Hongkong and Shanghai Banking Corporation* (Vol. I, p. 34),
 
 >> `Accounting, at least accounting as practised on the China coast, being an inexact art, the nature of which changed considerably over the period, the published figures are difficult to interpret and as a time series they contain serious deficiencies.`
@@ -27,7 +27,7 @@
 
 > For obvious reasons, the balance sheet (1) represents the gist of the bank’s assets and liabilities for each respective semester. It aggregates the balance data that one can find broken down under categories (2)(3)(4)(7)(8)(9)(10)(11)(12)(13)(14)(15). *Note, however, that (5) and (6) are not included here*. The latter are `flow data` (as opposed to `stock data`), meaning that they consist of origin-destination data documenting the flows or migration of assets acquired and liabilities incurred, within the bank’s branch network, and, importantly, *within a clearly delineated time interval* (accumulated assets/liabilities, or 'carried over from former semesters' are excluded). Because these data comprise both assets and liabilities, they cannot possibly be conveniently allocated under one of these categories. Rather, they help identify risks in interbranch dealings, in our case typically related to difficulties with regard to finding `matching funds`, the relative `exchange position` of a branch within the network and so on. As we will see later, flow data are particularly revealing when assessing the characteristics of specific bank management systems. Concretely, they document, on the basis of the distinction between `bills bought` and `bills sold`, how branches exchange liabilities and assets among each other, and thus make it, in principle, possible to identify trade patterns between countries and/or regions.
 
-### Interpretative hurdles; how reliable are the published accounts?
+## Interpretative hurdles; how reliable are the published accounts?
 
 > As bookkeeping technicalities are covered [elsewhere](https://github.com/michaelschiltz/even-keel/blob/master/1.%20database%20architecture.md#notes), we confine our discussion here to the *reliability* of sources. As can be expected, the midterm reports are to a certain extent a function of the political positioning of Japan and its institutions. As we will discuss further below, this has had ―ironically― its fortunate implications for the discussion here. At a time when the country was factually too weak to unilaterally claim its place in the world order, YSB resorted to a sort of ‘news propaganda’ (compare, in this respect, the ideas of [Akami Tomoko](https://www.amazon.com/Japans-Propaganda-Reuters-Northeast-1870-1934/dp/9089791027)) that was carefully geared to the information-hungry investor in London, Paris, or any other global financial market. As a result, early mid-term reports for 1893-1908 are very extensive, sensitively reflecting the market conditions that its branches faced, documenting the political and economic events that were to explain any volatility in its business record that to any extent could be considered extraordinary, and so on. 
 
