--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -1,7 +1,7 @@
- ## A. Flow-of-funds Analysis
+ # A. Flow-of-funds Analysis
 
 
-### Data structure
+## Data structure
 
 1. how to calculate the flow of funds amount from (generic) branch X to (generic) branch Y, on the basis of the organization of matrices in the original Midterm reports:
 *note that the `amount of interest bills (e)` was categorized differently, for reasons explained below.*
@@ -17,7 +17,7 @@ Table 1.
 
 Matrices prepared for the book project all follow this principle of organization. See a) [originals](https://doi.org/10.6084/m9.figshare.4059786.v4) (i.e. without amounts of interest bills and in the original currencies), b) [matrices *with* amounts of interest bills included](https://doi.org/10.6084/m9.figshare.4059807.v4), and 3) [(b) together with the amounts converted into Japanese yen](https://doi.org/10.6084/m9.figshare.4059843.v4).
 
-#### Notes:
+## Notes:
 
 > * the above formula `(c + d) - (a + b)` is the standard formula for calculating the flow-of-funds from one branch to another. If you need to understand why `bills sold` need to be subtracted from `bills bought`, consider the following:
 >> `bills bought` is the category signifying a positive transfer of funds, as branch X, after buying a bill from an exporter (and thus: paying out an amount of money) in the country of X, sends it on to branch Y, which books it as a `bill for collection` (*daikin toritate tegata* 代金取立手形). At maturity, branch Y collects the money as ‘adverse exchange’ (*gyaku kawase* 逆為替 or, alternatively, *toritate kawase* 取立為替) from an importer in the country in which Y is located, and books the bill to its asset side as a `bill collected`. *In the case of export bills, money thus follows, or in other words, has the same direction of, the goods*. 
@@ -48,7 +48,7 @@ Table 2.
 |   | BB | b/e | c’’’’ |   | BB | b/e | c’’’’’ |   | BB | b/e |   -   |  - |
 |   |    | TT  | d’’’’ |   |    | TT  | d’’’’’ |   |    | TT  |   -   |  - |
 
-#### Notes:
+## Notes:
 
 > * for obvious reasons, branches cannot send amounts to themselves (so-called 'self-loops'). Therefore, these cells have been filled with `-`.
 > * as in the above table, amounts sent are expressed by means of generic letters, `a`, `b`, `c`, `d`, `a'`, `b'` etc.
@@ -81,7 +81,7 @@ This can be done for all points in time `t1`, `t2`, `t3`, etc. Calculating the `
 
 The latter's visualization is graph 1 (below)
 
-### Ethnographic or 'archeological' relevance
+## Ethnographic or 'archeological' relevance
 
 > * when plotting, in a time series, the differential between a) funds sent from X to Y and b) funds sent from Y to X, we inadvertently *yet consciously* point out the *necessary* existence of a 'negative' `FoF-index` of certain branches versus others (either X or Y) and, by extension, the possibility of a negative `FoF-index` of a certain branch *vis-a-vis* the aggregated branch network. This may seem obvious and, indeed, *it is*: bankers at the time complained relentlessly about certain branches that they considered to be chronic 'withdrawers' of funds. In the vocabulary and thinking of social network analysis (SNA), however, it is not that simple. As the theory stands now, SNA does not easily accept the possibility of 'negative flows' (as, for instance, in the case of a banking customer using an overdraft facility with his local bank). In the book manuscript, I thought it to be important to be true to the contemporary problem awareness, and have attempted to allow the possibility of negative flows in the analysis and visualizations. See graph 1 below.
 
@@ -94,11 +94,11 @@ Source: [own data and analysis](https://plot.ly/~michaelschiltz/13/ysb-branches-
 *Legend*: Y: Yokohama Head Office 横浜本店; K: Kobe 神戸; L: London; NY: New York LY: Lyon; SF: San Francisco; HW: Hawai; S: Shanghai 上海; H: Hankow 漢口; B: Mumbai (Bombay); HK: Hong Kong 香港; T: Tokyo 東京; N: Nagasaki 長崎; TJ: Tianjin 天津; NZ: Niuzhang 牛荘; P: Beijing (Peking) 北京; D: Dairen 大連; LI: Liaoyang 遼陽; M: Mukden 奉天; LS: Lushun 旅順; A: Andong 安東; Z: Yantai (Chefoo) 芝罘; O: Osaka 大阪; TL: Tieling 鐵嶺; C: Changchun 長春; CBI: correspondent banks (international); CBD: correspondent banks (domestic). 
 
 
-### Rounding
+## Rounding
 
 > * importantly, amounts were rounded *to the ones*. This is quite different from earlier analyses, which chose to round to the thousands. In itself, however, it was the only way to come to conclusive findings with respect to the question whether hedging strategies were effectively adopted or not.
 
-### Conversions into Japanese yen
+## Conversions into Japanese yen
 
 > * Exchange rates were taken from the  ["Historical statistics - Exchange rates" page of the Bank of Japan](http://www.imes.boj.or.jp/hstat/data/ferdd/index.html); this page contains both a data source (in .CSV), and an [explanatory note](http://www.imes.boj.or.jp/hstat/data/ferdd/note_ferdd.html); see [here for English](http://www.imes.boj.or.jp/english/hstat/data/ferdd/note_ferdd.html)
 > * I have used the monthly average value as base for calculations (unfortunately, end-of-month rates are not included in the BOJ database)
