--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -8,12 +8,12 @@
 
 Table 1.
 
-| bill type    | specifics             | amounts | calculations (including addition of 'interest bills' data)                                                   |
-|--------------|-----------------------|---------|-----------------------------------------------------------------|
-| bills sold   | bills of exchange     |       $$ a $$ | $$ (c + d) - (a + b) $$
-|              | telegraphic transfers |       $$ b $$ | amount of interest bills $$(e)$$                                    |
-| bills bought | bills of exchange     |       $$ c $$ | $$ ((c + d) - (a + b)) + e $$                                         |
-|              | telegraphic transfers |       $$ d $$ | conversions of $$ (((c + d) - (a + b)) + e) $$ into Japanese yen (JPY)|
+| bill type    | specifics             | amounts | calculations (including addition of 'interest bills' data)             |
+|--------------|-----------------------|---------|------------------------------------------------------------------------|
+| bills sold   | bills of exchange     | $$ a $$ | $$ (c + d) - (a + b) $$                                                |
+|              | telegraphic transfers | $$ b $$ | amount of interest bills $$(e)$$                                       |
+| bills bought | bills of exchange     | $$ c $$ | $$ ((c + d) - (a + b)) + e $$                                          |
+|              | telegraphic transfers | $$ d $$ | conversions of $$ (((c + d) - (a + b)) + e) $$ into Japanese yen (JPY) |
 
 Matrices prepared for the book project all follow this principle of organization. See a) [originals](https://doi.org/10.6084/m9.figshare.4059786.v4) (i.e. without amounts of interest bills and in the original currencies), b) [matrices *with* amounts of interest bills included](https://doi.org/10.6084/m9.figshare.4059807.v4), and 3) [(b) together with the amounts converted into Japanese yen](https://doi.org/10.6084/m9.figshare.4059843.v4).
 
@@ -33,20 +33,20 @@ In the case of `bills sold`, however, the direction of the transfer is reversed.
 
 Table 2.
 
-|   | X  |     |       |   | Y  |     |        |   | Z  |     |      |   |
-|---|----|-----|-------|---|----|-----|--------|---|----|-----|------|---|
-| **X** | BS | b/e |    -   |  - | BS | b/e | a      |   | BS | b/e | a’   |   |
-|   |    | TT  |   -    |  - |    | TT  | b      |   |    | TT  | b’   |   |
-|   | BB | b/e |   -   |  - | BB | b/e | c      |   | BB | b/e | c’   |   |
-|   |    | TT  |   -   |  - |    | TT  | d      |   |    | TT  | d’   |   |
-| **Y** | BS | b/e | a’’   |   | BS | b/e |    -    |  - | BS | b/e | a’’’ |   |
-|   |    | TT  | b’’   |   |    | TT  |    -    |  - |    | TT  | b’’’ |   |
-|   | BB | b/e | c’’   |   | BB | b/e |    -   |  - | BB | b/e | c’’’ |   |
-|   |    | TT  | d’’   |   |    | TT  |    -    |  - |    | TT  | d’’’ |   |
-| **Z** | BS | b/e | a’’’’ |   | BS | b/e | a’’’’’ |   | BS | b/e |   -   |  - |
-|   |    | TT  | b’’’’ |   |    | TT  | b’’’’’ |   |    | TT  |   -   |  - |
-|   | BB | b/e | c’’’’ |   | BB | b/e | c’’’’’ |   | BB | b/e |   -   |  - |
-|   |    | TT  | d’’’’ |   |    | TT  | d’’’’’ |   |    | TT  |   -   |  - |
+|       | X  |     |       |   | Y  |     |        |   | Z  |     |      |   |
+|-------|----|-----|-------|---|----|-----|--------|---|----|-----|------|---|
+| **X** | BS | b/e | -     | - | BS | b/e | a      |   | BS | b/e | a’   |   |
+|       |    | TT  | -     | - |    | TT  | b      |   |    | TT  | b’   |   |
+|       | BB | b/e | -     | - | BB | b/e | c      |   | BB | b/e | c’   |   |
+|       |    | TT  | -     | - |    | TT  | d      |   |    | TT  | d’   |   |
+| **Y** | BS | b/e | a’’   |   | BS | b/e | -      | - | BS | b/e | a’’’ |   |
+|       |    | TT  | b’’   |   |    | TT  | -      | - |    | TT  | b’’’ |   |
+|       | BB | b/e | c’’   |   | BB | b/e | -      | - | BB | b/e | c’’’ |   |
+|       |    | TT  | d’’   |   |    | TT  | -      | - |    | TT  | d’’’ |   |
+| **Z** | BS | b/e | a’’’’ |   | BS | b/e | a’’’’’ |   | BS | b/e | -    | - |
+|       |    | TT  | b’’’’ |   |    | TT  | b’’’’’ |   |    | TT  | -    | - |
+|       | BB | b/e | c’’’’ |   | BB | b/e | c’’’’’ |   | BB | b/e | -    | - |
+|       |    | TT  | d’’’’ |   |    | TT  | d’’’’’ |   |    | TT  | -    | - |
 
 ## Notes:
 
