--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -63,12 +63,12 @@ Table 2.
 
 This can be done for all points in time `t1`, `t2`, `t3`, etc. Calculating the `FoF-index` of branch X in a simple 3-branch network (X, Y, Z) at time `t1` can be done as follows:
 
-|       | X                                    | Y                                     | Z                                     |                      |
-|-------|--------------------------------------|---------------------------------------|---------------------------------------|----------------------|
-| **X** |                                      | X→Y : (bills bought minus bills sold) | X→Z : (bills bought minus bills sold) | **SUM1:(X→Y)+(X→Z)** |
-| **Y** | Y→X: (bills bought minus bills sold) |                                       | Y→Z: (bills bought minus bills sold)  |                      |
-| **Z** | Z→X: (bills bought minus bills sold) | Z→Y: (bills bought minus bills sold)  |                                       |                      |
-|       | **SUM2:(Y→X)+(Z→X)**                 |                                       |                                       |                      |
+|       | X      | Y     |   Z   |  
+|-------|--------|-------|-------|
+| **X** |         | X→Y : (bills bought minus bills sold) | X→Z : (bills bought minus bills sold) | **SUM1:(X→Y)+(X→Z)** |
+| **Y** | Y→X: (bills bought minus bills sold) |   | Y→Z: (bills bought minus bills sold)  |    |
+| **Z** | Z→X: (bills bought minus bills sold) | Z→Y: (bills bought minus bill sold)  |  |  |
+|       | **SUM2:(Y→X)+(Z→X)**  |     |      |    |
 
 
 4. Having calculated the `FoF-index` of *every* branch vis-a-vis the branch network at *all* points in time, we can proceed with a **time series**:
