--- a/2. data inclusion and exclusion.md
+++ b/2. data inclusion and exclusion.md
@@ -23,13 +23,13 @@ Source: own dataset and visualization; see: my [plotly-pages](https://plot.ly/~m
 
 > * in the Midterm reports of the Yokohama Specie Bank, stock data are generally included as follows:
 
->| [name]   |          |          | 店名 branch name                            |
->|----------|----------|----------|---------------------------------------------|
->| z        | y        | x        | 種類 `type of entry`                        |
->| [amount] | [amount] | [amount] | 前期繰越高 `carried over from last semester`  |
->| [amount] | [amount] | [amount] | 当期 [...]高 `[acquired] this semester`       |
->| [amount] | [amount] | [amount] | 当期 [...]高 `[paid out] this semester`       |
->| [amount] | [amount] | [amount] | 差引き現在高 `amount on hand; current amount` |
+| [name]   |          |          | 店名 branch name                             |
+|----------|----------|----------|--------------------------------------------|
+| z        | y        | x        | 種類 `type of entry`                         |
+| [amount] | [amount] | [amount] | 前期繰越高 `carried over from last semester` |
+| [amount] | [amount] | [amount] | 当期 [...]高 `[acquired] this semester`      |
+| [amount] | [amount] | [amount] | 当期 [...]高 `[paid out] this semester`      |
+| [amount] | [amount] | [amount] | 差引き現在高 `amount on hand; current amount` |
 
 >> * remarks: as is the convention in prewar Japanese, the table is to be read **from right to left**.
 
