--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -8,12 +8,12 @@
 
 Table 1.
 
-| bill type    | specifics             | amounts | calculations (including addition of 'interest bills' data)             |
-|--------------|-----------------------|---------|------------------------------------------------------------------------|
-| bills sold   | bills of exchange     | $a$ | $(c + d) - (a + b)$                                                |
-|              | telegraphic transfers | $b$ | amount of interest bills $(e)$                                       |
-| bills bought | bills of exchange     | $c$ | $((c + d) - (a + b)) + e$                                          |
-|              | telegraphic transfers | $d$ | conversions of $(((c + d) - (a + b)) + e)$ into Japanese yen (JPY) |
+| bill type    | specifics             | amounts | calculations (including addition of 'interest bills' data)         |
+|--------------|-----------------------|---------|--------------------------------------------------------------------|
+| bills sold   | bills of exchange     | $a$     | $(c + d) - (a + b)$                                                |
+|              | telegraphic transfers | $b$     | amount of interest bills $(e)$                                     |
+| bills bought | bills of exchange     | $c$     | $((c + d) - (a + b)) + e$                                          |
+|              | telegraphic transfers | $d$     | conversions of $(((c + d) - (a + b)) + e)$ into Japanese yen (JPY) |
 
 Matrices prepared for the book project all follow this principle of organization. See a) [originals](https://doi.org/10.6084/m9.figshare.4059786.v4) (i.e. without amounts of interest bills and in the original currencies), b) [matrices *with* amounts of interest bills included](https://doi.org/10.6084/m9.figshare.4059807.v4), and 3) [(b) together with the amounts converted into Japanese yen](https://doi.org/10.6084/m9.figshare.4059843.v4).
 
@@ -63,12 +63,12 @@ Table 2.
 
 This can be done for all points in time `t1`, `t2`, `t3`, etc. Calculating the `FoF-index` of branch X in a simple 3-branch network (X, Y, Z) at time `t1` can be done as follows:
 
-|       | X      | Y     |   Z   |  
-|-------|--------|-------|-------|
-| **X** |         | X→Y : (bills bought minus bills sold) | X→Z : (bills bought minus bills sold) | **SUM1:(X→Y)+(X→Z)** |
-| **Y** | Y→X: (bills bought minus bills sold) |   | Y→Z: (bills bought minus bills sold)  |    |
-| **Z** | Z→X: (bills bought minus bills sold) | Z→Y: (bills bought minus bill sold)  |  |  |
-|       | **SUM2:(Y→X)+(Z→X)**  |     |      |    |
+| ...   | X       | Y       | Z       | ...         |
+|-------|---------|--------|---------|-------------|
+| **X** | ...     | X→Y : (bills bought minus bills sold) | X→Z : (bills bought minus bills sold) | **SUM1:(X→Y)+(X→Z)** |
+| **Y** | Y→X: (bills bought minus bills sold) | ...      | Y→Z: (bills bought minus bills sold)  | ...                  |
+| **Z** | Z→X: (bills bought minus bills sold) | Z→Y: (bills bought minus bill sold)   | ...       | ...                 |
+| ...   | **SUM2:(Y→X)+(Z→X)**                 | ...                |         ...          | ...                         |
 
 
 4. Having calculated the `FoF-index` of *every* branch vis-a-vis the branch network at *all* points in time, we can proceed with a **time series**:
