--- a/6. other.md
+++ b/6. other.md
@@ -1,6 +1,6 @@
-## Issues needing further clarification
+# Issues needing further clarification
 
-### The profitability of the bill business
+## The profitability of the bill business
 
 One of the aspects of exchange banking that has long eluded myself and other researchers, is the notion of profitability of the bill business. Fortunately, this has
 been cleared up by Suzuki Toshio in a recent paper. He quotes a letter, dated January 14 1885, in the David McLean archives at SOAS, in which McLean explains how exchange bankers in the HSBC London Office arrived at an exchange rate on Hong Kong and how they calculated/estimated the profits they were going to reap. I quote the letter first (it can be found in a chapter by Manhan Siu (see below)):
